Updated NN notebook
Updated NN notebook

--- a/lectures/lecture_1/Nearest Neighbor Classification with Wine Dataset.ipynb
+++ b/lectures/lecture_1/Nearest Neighbor Classification with Wine Dataset.ipynb
@@ -121,7 +121,7 @@
    },
    "outputs": [],
    "source": [
-    "Now let's train a k-NN on Iris dataset!"
+    "Now let's train a k-NN on Wine dataset!"
    ]
   },
   {
@@ -131,10 +131,10 @@
     "editable": true
    },
    "source": [
-    "About the dataset - \n",
-    "Iris is a flower. The flower can belong to one of three categories - Setosa, Versicolour, and Virginica. Think of it as\n",
-    "being equivalent to red rose, white rose and pink rose. Given the flower's features such as length of width of petals, we need\n",
-    "to classify the flower into its correct category."
+    "Data Description\n",
+    "1. Multiclass classification problem with 3 classes: {1,2,3} representing 3 different cultivators\n",
+    "2. 13 continuous attributes\n",
+    "3. UCI Machine Learning Repository"
    ]
   },
   {
