Updated Sklearn Overview
Updated Sklearn Overview

--- a/lectures/lecture_1/7_Sklearn Overview.ipynb
+++ b/lectures/lecture_1/7_Sklearn Overview.ipynb
@@ -79,7 +79,6 @@
     "\n",
     "# Show the original image\n",
     "plt.imshow(img)\n",
-    "#plt.imshow(np.uint8(img))\n",
     "plt.show()"
    ]
   },
@@ -180,7 +179,7 @@
     "# C is a hyper-parameter\n",
     "clf = svm.SVC(C=10)\n",
     "\n",
-    "# Learning a classifier\n",
+    "# Training a classifier\n",
     "clf.fit(X_train, y_train)"
    ]
   },
@@ -239,6 +238,7 @@
     "# See the value of C that gives best accuracy on validation data\n",
     "\n",
     "initial_C = 0.1\n",
+    "\n",
     "C = initial_C\n",
     "best_acc = 0.0\n",
     "best_C = initial_C\n",
@@ -259,6 +259,27 @@
     "clf = svm.SVC(C=best_C)\n",
     "clf.fit(X_train, y_train) # you can use X_train + X_valid here too if you feel more data will be helpful\n",
     "predictions = clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "\n",
+    "# Initialize\n",
+    "grd = GradientBoostingClassifier(n_estimators=50)\n",
+    "# Train\n",
+    "grd.fit(X_train, y_train)\n",
+    "# Predict\n",
+    "preds = grd.predict(X_valid)\n",
+    "# Report\n",
+    "accuracy = np.sum(preds == y_valid)/len(y_valid)\n",
+    "print ('accuracy = ' + str(accuracy))"
    ]
   },
   {
