--- a/lectures/lecture_1/7_Sklearn Overview.ipynb
+++ b/lectures/lecture_1/7_Sklearn Overview.ipynb
@@ -36,6 +36,7 @@
    },
    "outputs": [],
    "source": [
+    "# Provides toy datasets\n",
     "from sklearn import datasets\n",
     "\n",
     "# Load the iris dataset\n",
@@ -71,7 +72,6 @@
    },
    "outputs": [],
    "source": [
-    "# Necessary Import statement for scipy, using which we read image and pass it to the pyplot object\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.misc import imread, imresize\n",
     "\n",
@@ -144,21 +144,19 @@
     "y = iris.target\n",
     "\n",
     "# 20% of data as testing data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=4)\n",
     "\n",
     "# 20% of TRAINING data as validation set\n",
-    "X_train, X_valid, y_train, y_valid = train_test_split(X_train, y_train, test_size=0.2, random_state=42)"
+    "X_train, X_valid, y_train, y_valid = train_test_split(X_train, y_train, test_size=0.2, random_state=4)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
    "source": [
     "Train a SVM classifier"
    ]
@@ -279,7 +277,7 @@
     "preds = grd.predict(X_valid)\n",
     "# Report\n",
     "accuracy = np.sum(preds == y_valid)/len(y_valid)\n",
-    "print ('accuracy = ' + str(accuracy))"
+    "print ('Validation accuracy = ' + str(accuracy))"
    ]
   },
   {
