--- a/lectures/lecture_1/Nearest Neighbor Classification with Wine Dataset.ipynb
+++ b/lectures/lecture_1/Nearest Neighbor Classification with Wine Dataset.ipynb
@@ -112,14 +112,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
    "source": [
     "Now let's train a k-NN on Wine dataset!"
    ]
@@ -215,6 +213,9 @@
    "outputs": [],
    "source": [
     "# Parameter 'p' is the Power parameter for the Minkowski metric.\n",
+    "# p = 1 --> Manhattan distance\n",
+    "# p = 2 --> Euclidean distance\n",
+    "\n",
     "clf = KNeighborsClassifier(3, p=1) # p = 1 corresponds to Manhattan distance\n",
     "# p = 2 gives Euclidean distance (default is p = 2 and hence, Euclidean distance)\n",
     "clf.fit(X_train, y_train)\n",
