Updated Practice Prob for Decision Trees
Updated Practice Prob for Decision Trees

--- a/lectures/lecture_1/PracticeProb_Lec1.ipynb
+++ b/lectures/lecture_1/PracticeProb_Lec1.ipynb
@@ -39,6 +39,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Implement here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# k-Nearest Neighbor "
    ]
   },
@@ -50,18 +68,9 @@
    },
    "outputs": [],
    "source": [
-    "# Split data into training, validation and testing datasets\n",
-    "\n",
     "# Implement k-NN\n",
     "\n",
     "# Parameter tuning for 'k'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Naive Bayes "
    ]
   }
  ],
