Added Logisitc Regression

--- a/lectures/lecture_2/1_GenerativeModel.ipynb
+++ b/lectures/lecture_2/1_GenerativeModel.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Outline:\n",
     "    Load Wine data\n",
@@ -102,7 +105,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# make_classification"
    ]
@@ -111,7 +117,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
