--- a/lectures/lecture_2/1_GenerativeModel_Practice1.ipynb
+++ b/lectures/lecture_2/1_GenerativeModel_Practice1.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "1. Create a classification problem with 3 classes, 15 features and 5000 rows\n",
     "2. Take the last 1000 rows to be the test set\n",
-    "3. Run multinomial and gaussian naive bayes on this problem\n",
-    "4. Calculate class prior probabilities for each class in training data (first 4k rows) for the gaussian case\n",
-    "5. Calculate likelihood (probability of features given a class) for the multinomial case\n",
+    "3. Run Gaussian naive bayes on this problem\n",
+    "4. Calculate class prior probabilities for each class in training data (first 4k rows)\n",
+    "5. Calculate the probability of the samples for each class in the test set\n",
     "\n",
     "References:\n",
     "    http://scikit-learn.org/stable/modules/generated/sklearn.datasets.make_classification.html\n",
-    "    http://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.GaussianNB.html#sklearn.naive_bayes.GaussianNB\n",
-    "    http://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.MultinomialNB.html"
+    "    http://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.GaussianNB.html#sklearn.naive_bayes.GaussianNB"
    ]
   }
  ],
