--- a/lectures/lecture_2/5_Kernels.ipynb
+++ b/lectures/lecture_2/5_Kernels.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Kernelized SVMs"
    ]
@@ -11,7 +14,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -35,7 +40,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -81,7 +88,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -94,12 +103,54 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "# Support vectors \n",
     "print (clf.support_vectors_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from matplotlib.colors import ListedColormap\n",
+    "\n",
+    "h = .02  # step size in the mesh\n",
+    "# Create color maps\n",
+    "cmap_light = ListedColormap(['#FFAAAA', '#AAFFAA', '#AAAAFF'])\n",
+    "cmap_bold = ListedColormap(['#FF0000', '#00FF00', '#0000FF'])\n",
+    "\n",
+    "X = np.concatenate((X_train, X_test))\n",
+    "y = np.concatenate((y_train, y_test))\n",
+    "svc = SVC(C=100, kernel='poly')\n",
+    "svc.fit(X[:,:2], y)\n",
+    "\n",
+    "# Plot the decision boundary. For that, we will assign a color to each\n",
+    "# point in the mesh [x_min, x_max]x[y_min, y_max].\n",
+    "x_min, x_max = X[:, 0].min() - 1, X[:, 0].max() + 1\n",
+    "y_min, y_max = X[:, 1].min() - 1, X[:, 1].max() + 1\n",
+    "xx, yy = np.meshgrid(np.arange(x_min, x_max, h),\n",
+    "                    np.arange(y_min, y_max, h))\n",
+    "Z = svc.predict(np.c_[xx.ravel(), yy.ravel()])\n",
+    "\n",
+    "# Put the result into a color plot\n",
+    "Z = Z.reshape(xx.shape)\n",
+    "plt.figure()\n",
+    "plt.pcolormesh(xx, yy, Z, cmap=cmap_light)\n",
+    "\n",
+    "# Plot also the training points\n",
+    "plt.scatter(X[:, 0], X[:, 1], c=y, cmap=cmap_bold)\n",
+    "plt.xlim(xx.min(), xx.max())\n",
+    "plt.ylim(yy.min(), yy.max())\n",
+    "plt.show()"
    ]
   }
  ],
