--- a/lectures/lecture_2/1_GenerativeModel.ipynb
+++ b/lectures/lecture_2/1_GenerativeModel.ipynb
@@ -25,7 +25,6 @@
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
-    "from sklearn.naive_bayes import GaussianNB, MultinomialNB\n",
     "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -49,6 +48,7 @@
    },
    "outputs": [],
    "source": [
+    "print (X_train.shape)\n",
     "X_train.head()"
    ]
   },
@@ -62,6 +62,8 @@
    },
    "outputs": [],
    "source": [
+    "from sklearn.naive_bayes import GaussianNB, MultinomialNB\n",
+    "\n",
     "# Initialize Gaussian Naive Bayes\n",
     "gnb = GaussianNB()\n",
     "# Train the classifier\n",
@@ -73,6 +75,13 @@
     "# print the accuracy\n",
     "print ('Training accuracy = ' + str(np.sum(y_train_pred == y_train)/len(y_train)))\n",
     "print ('Test accuracy = ' + str(np.sum(y_pred == y_test)/len(y_test)))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "GridSearchCV and accuracy_score using Multinomial Naive Bayes"
    ]
   },
   {
@@ -100,7 +109,8 @@
     "accuracy = accuracy_score(y_pred, y_test)\n",
     "train_acc = accuracy_score(clf.predict(X_train), y_train)\n",
     "print ('Test accuracy = ' + str(accuracy))# + ' at alpha = ' + str(alpha))\n",
-    "print ('Train accuracy = ' + str(train_acc)) "
+    "print ('Train accuracy = ' + str(train_acc)) \n",
+    "print (clf.best_params_)"
    ]
   },
   {
