--- a/lectures/lecture_2/1_GenerativeModel_Practice1.ipynb
+++ b/lectures/lecture_2/1_GenerativeModel_Practice1.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "1. Create a classification problem with 3 classes, 15 features and 5000 rows\n",
     "2. Take the last 1000 rows to be the test set\n",
-    "3. Run Gaussian naive bayes on this problem\n",
+    "3. Run Gaussian naive bayes on this problem and report test accuracy\n",
     "4. Calculate class prior probabilities for each class in training data (first 4k rows)\n",
     "5. Calculate the probability of the samples for each class in the test set\n",
     "\n",
