--- a/lectures/lecture_2/EvaluatingClassifiers_Practice.ipynb
+++ b/lectures/lecture_2/EvaluatingClassifiers_Practice.ipynb
@@ -7,26 +7,25 @@
     "editable": true
    },
    "source": [
-    "1. Run the cell given below to create testing and training sets\n",
-    "2. Train a Polynomial Kernelized SVM on this data and tune the parameters using GridSearchCV to get \n",
-    "    a. the best degree in range 1 to 5\n",
-    "    b. the best value of C in range [0.1, 0.5, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+    "1. Load iris data and make a 50-50 split\n",
+    "2. Train K-NN on train set using k = 5\n",
+    "3. Find accuracy on test set\n",
+    "4. Find sensitivity and specificity\n",
+    "5. Plot ROC curve for all classes on a single plot"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
-    "from matplotlib.colors import ListedColormap\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import label_binarize\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Load the iris dataset\n",
@@ -34,17 +33,19 @@
     "X = iris.data\n",
     "y = iris.target\n",
     "\n",
-    "# Split into testing and training data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=5)"
+    "y = label_binarize(y, classes=[0, 1, 2])\n",
+    "n_classes = y.shape[1]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.85, random_state=57) # 85% data is test, 15% is train"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
