--- a/lectures/lecture_3/2_Perceptron_SVM_Practice.ipynb
+++ b/lectures/lecture_3/2_Perceptron_SVM_Practice.ipynb
@@ -5,11 +5,10 @@
    "metadata": {},
    "source": [
     "# Practice Question\n",
-    "1. Load the iris dataset (first two features)\n",
-    "2. Divide data into training and testing data (80-20 split)\n",
-    "3. Run logisitic regression on this data (play with parameters using GridSearchCV to improve accuracy)\n",
-    "4. Plot decision boundaries as done here\n",
-    "5. Use SGDClassifier and use gridsearch to tune the parameters {penalty, alpha, eta0}. Use loss='log', learning_rate='constant' and n_iter=100."
+    "1. Implement Perceptron Model on Iris dataset (first 2 features)\n",
+    "2. Divide the dataset into Train, Validation and Test data. Tune the cost parameter for SVM on Iris data.\n",
+    "Try Values {0.0001, 0.001,0.01,0.1,1,10,100}\n",
+    "3. Select the best and the worst value and compare the results on the test data."
    ]
   },
   {
@@ -21,9 +20,25 @@
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
-    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.linear_model import Perceptron\n",
+    "from sklearn.svm import SVC\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# Load the iris dataset\n",
     "iris = datasets.load_iris()\n",
     "X = iris.data[:, :2]\n",
@@ -60,5 +75,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
