--- a/lectures/lecture_3/4_Richer_Practice.ipynb
+++ b/lectures/lecture_3/4_Richer_Practice.ipynb
@@ -5,11 +5,31 @@
    "metadata": {},
    "source": [
     "# Practice Question\n",
-    "1. Load the iris dataset (first two features)\n",
-    "2. Divide data into training and testing data (80-20 split)\n",
-    "3. Run logisitic regression on this data (play with parameters using GridSearchCV to improve accuracy)\n",
-    "4. Plot decision boundaries as done here\n",
-    "5. Use SGDClassifier and use gridsearch to tune the parameters {penalty, alpha, eta0}. Use loss='log', learning_rate='constant' and n_iter=100."
+    "1. Load the Iris dataset. Take the first 2 features.\n",
+    "2. Perform OnevsOne and OnevsRest classification using the SVM.\n",
+    "3. Plot the descision boundaries. Compare the decision boundaries with Logistic Regression."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn import datasets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.multiclass import OneVsOneClassifier, OneVsRestClassifier\n",
+    "from matplotlib.colors import ListedColormap\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import LinearSVC\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -21,9 +41,6 @@
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
     "# Load the iris dataset\n",
     "iris = datasets.load_iris()\n",
     "X = iris.data[:, :2]\n",
@@ -60,5 +77,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
