--- a/lectures/lecture_4/1_Clustering.ipynb
+++ b/lectures/lecture_4/1_Clustering.ipynb
@@ -61,6 +61,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the difference between calling KMeans and any classifier using sklearn?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -106,7 +113,8 @@
    "outputs": [],
    "source": [
     "# Sum of distances of samples to their closest cluster center.\n",
-    "print (k_means.inertia_)"
+    "print (k_means.inertia_)\n",
+    "# Same as the cost function we have been discussing"
    ]
   },
   {
@@ -139,7 +147,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Plotting the clusters in 3-D using Axes3D library"
    ]
@@ -285,7 +296,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Visualizing the Centers with iteration"
    ]
@@ -294,12 +308,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "for i in np.arange(1,7,1):\n",
-    "    k_means = KMeans(n_clusters=5, n_init=1, max_iter=i, init='random') \n",
+    "    k_means = KMeans(n_clusters=5, n_init=1, max_iter=i, init='random', random_state=5) \n",
     "    k_means.fit(X)\n",
     "    labels = k_means.labels_\n",
     "    colors_1 = [colors[labels[i]] for i in range(len(labels))]\n",
@@ -315,12 +331,16 @@
     "    ax.set_xlabel('Petal width')\n",
     "    ax.set_ylabel('Sepal length')\n",
     "    ax.set_zlabel('Petal length')\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    print (k_means.inertia_)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Agglomerative Clustering"
    ]
@@ -329,7 +349,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -362,7 +384,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -396,7 +420,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
